<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_registro" />

    <TextView
        android:id="@+id/txtRegistrarActivityUsuarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="24dp"
        android:text="@string/usuarios"
        android:textColor="@color/rosa"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/edtTxtRegistrarActivityNomCom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/nombre_completo"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistrarActivityUsuarios" />

    <EditText
        android:id="@+id/edtTxtRegistrarActivityUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/nombre_usuario2"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtRegistrarActivityNomCom" />

    <EditText
        android:id="@+id/edtTxtRegistrarActivityCorrElec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/correo_electronico"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtRegistrarActivityUsername" />

    <EditText
        android:id="@+id/edtTxtRegistrarActivityContrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/contrasenia2"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtRegistrarActivityCorrElec" />

    <EditText
        android:id="@+id/edtTxtRegistrarActivityRepContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/repetir_contrasenia"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtRegistrarActivityContrasenia" />

    <Button
        android:id="@+id/btnRegistrarActivityGrabar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bordes_redondos"
        android:text="@string/grabar"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegistrarActivityLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bordes_redondos"
        android:text="@string/loginButton"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRegistrarActivityGrabar" />
</androidx.constraintlayout.widget.ConstraintLayout>